# py4swiss

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: build-and-publish.yml  build-binaries.yml  ci.yml  draft-release.yml
cpp/include/matching/: templateinstantiation.h
cpp/include/matching/detail/: types.h
cpp/src/matching/detail/: graph.cpp  parentblossom.cpp  rootblossom.cpp
python_bindings/: computer_bindings.cpp  dynamicuint_bindings.cpp
src/py4swiss/: dynamicuint.pyi  main.py  matching_computer.pyi
src/py4swiss/engines/burstein/: bye_matcher.py  pairer.py  player.py
src/py4swiss/engines/burstein/criteria/quality/: c6.py  c7.py
src/py4swiss/engines/common/: __init__.py  color_preference.py  exceptions.py  float.py  pairing.py  pairing_engine.py
src/py4swiss/engines/dubov/: bye_matcher.py  dubov_engine.py  player.py
src/py4swiss/engines/dubov/bracket/: bracket.py  bracket_matcher.py  bracket_pairer.py
src/py4swiss/engines/dubov/criteria/abstract/: color_criterion.py
src/py4swiss/engines/dubov/criteria/color/: e1.py  e2.py  e3.py  e4.py  e5.py
src/py4swiss/engines/dubov/criteria/quality/: c10.py  c6.py  c7.py  c8.py  c9.py
src/py4swiss/engines/dutch/: __init__.py  bracket_matcher.py  dutch_engine.py  player.py  player_info.py  validity_matcher.py
src/py4swiss/engines/dutch/bracket/: bracket.py  bracket_matcher.py  bracket_pairer.py  brackets.py
src/py4swiss/engines/dutch/criteria/: __init__.py
src/py4swiss/engines/dutch/criteria/absolute/: c1.py  c2.py  c3.py
src/py4swiss/engines/dutch/criteria/abstract/: __init__.py  absolute_criterion.py  color_criterion.py  quality_criteron.py
src/py4swiss/engines/dutch/criteria/color/: e1.py  e2.py  e3.py  e4.py  e5.py
src/py4swiss/engines/dutch/criteria/quality/: c10.py  c11.py  c12.py  c13.py  c14.py  c15.py  c16.py  c17.py  c18.py  c19.py  c5.py  c6.py  c7.py  c8.py  c9.py
src/py4swiss/trf/: __init__.py  exceptions.py  parsed_trf.py  trf_line.py  trf_parser.py
src/py4swiss/trf/codes/: __init__.py  player_code.py  team_code.py  tournament_code.py  x_code.py
src/py4swiss/trf/results/: __init__.py  color_token.py  result_token.py  round_result.py  scoring_point_system.py  scoring_point_system_code.py
src/py4swiss/trf/sections/: __init__.py  abstract_section.py  player_section.py  team_section.py  tournament_section.py  x_section.py
tests/: __init__.py  test_engines_burstein.py  test_engines_common.py  test_engines_dubov.py  test_engines_dutch.py  test_main.py  test_trf.py
tests/data/: burstein_late_entries.trf  comments.trf  incompatible_color.trf  incompatible_result.trf  incorrect_points.trf  javafo_example.trf  malformed_pairings.txt  missing_result.trf  missing_starting_number.trf  non_distinct_pairings.txt  pairings_example.txt  too_many_results.trf
tests/helpers/: bbp_pairings.py  ccp_dubov_system_adapter.py  pairing_engine_clients.py  pairing_engine_comparers.py  trf.py
