[project]
name = "py4swiss"
version = "0.1.0"
description = "A package to pair swiss tournaments"
readme = "README.md"
authors = [{ name = "Moritz Eckert", email = "MoritzEckert@web.de" }]
license = { text = "MIT" }
keywords = ["swiss", "pairing", "chess", "tournament"]
dependencies = [
    "pydantic>=2.11.9"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment :: Board Games"
]

[project.urls]
Homepage = "https://github.com/Moritz72/py4swiss"
Repository = "https://github.com/Moritz72/py4swiss"

[project.optional-dependencies]
dev = [
    "pytest>=7.2",
    "mypy>=1.0"
]

[build-system]
requires = [
    "setuptools>=61.0",
    "pybind11>=2.6.0"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["py4swiss"]
package-dir = {"" = "src"}

[tool.mypy]
files = ["src/py4swiss", "tests"]
strict = true

[[tool.mypy.overrides]]
module = "pytest"
ignore_missing_imports = true
