[project]
name = "py4swiss"
version = "0.1.3"
description = "A package to pair swiss tournaments"
readme = "README.md"
authors = [{ name = "Moritz Eckert", email = "MoritzEckert@web.de" }]
license = { text = "MIT" }
keywords = ["swiss", "pairing", "chess", "tournament"]
dependencies = [
    "pydantic>=2.11.9"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment :: Board Games"
]

[project.urls]
Homepage = "https://github.com/Moritz72/py4swiss"
Repository = "https://github.com/Moritz72/py4swiss"

[project.optional-dependencies]
dev = [
    "pytest>=7.2",
    "pytest-cov>=7.0.0",
    "mypy>=1.0",
    "ruff>=0.14",
    "black>=24.0"
]

[project.scripts]
py4swiss = "py4swiss.main:main"

[build-system]
requires = [
    "setuptools>=61.0",
    "pybind11>=2.6.0"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.mypy]
files = ["src/py4swiss", "tests"]
strict = true

[[tool.mypy.overrides]]
module = "pytest"
ignore_missing_imports = true

[tool.ruff]
src = ["src/py4swiss", "tests"]
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["py4swiss"]

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = [
  "E",    # pycodestyle (errors)
  "F",    # pyflakes
  "I",    # isort
  "B",    # flake8-bugbear
  "UP",   # pyupgrade
  "C4",   # flake8-comprehensions
  "N",    # pep8-naming
  "S",    # flake8-bandit (security)
  "TCH",  # flake8-type-checking
  "TID",  # tidy imports
  "PL",   # pylint-like rules
]
ignore = [
  "E501",  # line length
]

[tool.ruff.lint.pylint]
max-branches = 20
max-statements = 60

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "S101",
    "S311",
    "S603",
]

[tool.black]
line-length = 120
target-version = ['py311']
skip-string-normalization = false
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
